--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -20,13 +20,19 @@ jobs:
       - name: Check Terraform files format
         run: |
           build/automation/etc/githooks/scripts/terraform-format-pre-commit.sh
+      - name: Create coverage report
+        run: |
+          make compile coverage-report
       - uses: sonarsource/sonarcloud-github-action@master
         # SEE: https://github.com/SonarSource/sonarcloud-github-action
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectBaseDir: ./application
+          projectBaseDir: ./application/authentication
           args: >
             -Dsonar.organization=nhsd-exeter
-            -Dsonar.projectKey=uec-tools-mdo
+            -Dsonar.projectKey=uec-dos-api-saa
+            -Dsonar.java.binaries=target/classes
+            -Dsonar.coverage.exclusions=src/main/java/**/config/*.java,src/test/**/*.*
+            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco
