--- a/application/authentication/pom.xml
+++ b/application/authentication/pom.xml
@@ -16,6 +16,9 @@
   <description>Service Finder Authentication API</description>
 
   <properties>
+    <dependency-check-maven.version>7.4.4</dependency-check-maven.version>
+    <sonar.organization>nhsd-exeter</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <java.version>16</java.version>
     <maven.compiler.source>16</maven.compiler.source>
     <maven.compiler.target>16</maven.compiler.target>
@@ -69,7 +72,6 @@
       <artifactId>spring-boot-starter-jersey</artifactId>
     </dependency>
   </dependencies>
-
   <build>
     <plugins>
       <plugin>
@@ -139,7 +141,29 @@
           </execution>
         </executions>
       </plugin>
-
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>${dependency-check-maven.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <!-- .Disable Net content-->
+          <ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
+          <cveStartYear>2022</cveStartYear>
+          <failBuildOnCVSS>10</failBuildOnCVSS>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>3.7.0.1746</version>
+      </plugin>
     </plugins>
   </build>
 
