--- a/application/authentication/pom.xml
+++ b/application/authentication/pom.xml
@@ -16,6 +16,7 @@
   <description>Service Finder Authentication API</description>
 
   <properties>
+    <dependency-check-maven.version>7.4.4</dependency-check-maven.version>
     <java.version>16</java.version>
     <maven.compiler.source>16</maven.compiler.source>
     <maven.compiler.target>16</maven.compiler.target>
@@ -75,11 +76,28 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>${dependency-check-maven.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <!-- .Disable Net content-->
+          <ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
+          <cveStartYear>2022</cveStartYear>
+          <failBuildOnCVSS>10</failBuildOnCVSS>
+        </configuration>
       </plugin>
 
       <plugin>
