--- a/deployment/stacks/application/base/template/service-authentication/service-authentication-service.yaml
+++ b/deployment/stacks/application/base/template/service-authentication/service-authentication-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: uec-dos-api-auth-service
-  namespace: uec-dos-api-sfa
+  namespace: uec-dos-api-saa
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
     service.beta.kubernetes.io/aws-load-balancer-connection-draining-enabled: "true"
