--- a/deployment/stacks/application/base/template/kustomization.yaml
+++ b/deployment/stacks/application/base/template/kustomization.yaml
@@ -18,6 +18,8 @@ configMapGenerator:
   - name: service-authentication-configmap
     literals:
       - ALLOWED_ORIGINS=ALLOWED_ORIGINS_TO_REPLACE
+      - AUTH_LOGIN_URL=AUTH_LOGIN_URL_TO_REPLACE
+      - AUTH_LOGIN_URI=AUTH_LOGIN_URI_TO_REPLACE
       - CERTIFICATE_DOMAIN=CERTIFICATE_DOMAIN_TO_REPLACE
       - COGNITO_USER_POOL_CLIENT_SECRET=COGNITO_USER_POOL_CLIENT_SECRET_TO_REPLACE
       - COGNITO_USER_POOL_CLIENT_ID=COGNITO_USER_POOL_CLIENT_ID_TO_REPLACE
@@ -32,10 +34,14 @@ configMapGenerator:
       - DB_USERNAME=DB_USERNAME_TO_REPLACE
       - MAIL_SENDER_EMAIL=MAIL_SENDER_EMAIL_TO_REPLACE
       - MAIL_SENDER_NAME=MAIL_SENDER_NAME_TO_REPLACE
+      - POSTCODE_MAPPING_SERVICE_URL=POSTCODE_MAPPING_SERVICE_URL_TO_REPLACE
+      - POSTCODE_MAPPING_USER=POSTCODE_MAPPING_USER_TO_REPLACE
+      - POSTCODE_MAPPING_PASSWORD=POSTCODE_MAPPING_PASSWORD_TO_REPLACE
       - PROFILE=PROFILE_TO_REPLACE
       - SF_AUTH_URL=SF_AUTH_URL_TO_REPLACE
       - SPRING_PROFILES_ACTIVE=SPRING_PROFILES_ACTIVE_TO_REPLACE
       - SERVER_PORT=AUTH_SERVER_PORT_TO_REPLACE
+      - UI_MAIN_UI=UI_MAIN_UI_TO_REPLACE
       - VERSION=VERSION_TO_REPLACE
 images:
   - name: AWS_ECR_TO_REPLACE/uec-dos-api/saa/api
