--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -20,19 +20,19 @@ jobs:
       - name: Check Terraform files format
         run: |
           build/automation/etc/githooks/scripts/terraform-format-pre-commit.sh
-      - name: Create coverage report
-        run: |
-          make compile coverage-report
-      - uses: sonarsource/sonarcloud-github-action@master
-        # SEE: https://github.com/SonarSource/sonarcloud-github-action
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          projectBaseDir: ./application/authentication
-          args: >
-            -Dsonar.organization=nhsd-exeter
-            -Dsonar.projectKey=uec-dos-api-saa
-            -Dsonar.java.binaries=target/classes
-            -Dsonar.coverage.exclusions=src/main/java/**/config/**/*.java,src/main/java/**/service/**/*.java,src/main/java/**/repository/**/*.java,src/main/java/**/adapter/**/*.java,src/main/java/**/model/**/*.java,src/main/java/**/domain/**/*.java,src/main/java/**/exception/*.java,src/main/java/**/interceptor/*.java,src/test/**/*.*
-            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco
+      # - name: Create coverage report
+      #   run: |
+      #     make compile coverage-report
+      # - uses: sonarsource/sonarcloud-github-action@master
+      #   # SEE: https://github.com/SonarSource/sonarcloud-github-action
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #   with:
+      #     projectBaseDir: ./application/authentication
+      #     args: >
+      #       -Dsonar.organization=nhsd-exeter
+      #       -Dsonar.projectKey=uec-dos-api-saa
+      #       -Dsonar.java.binaries=target/classes
+      #       -Dsonar.coverage.exclusions=src/main/java/**/config/**/*.java,src/main/java/**/service/**/*.java,src/main/java/**/repository/**/*.java,src/main/java/**/adapter/**/*.java,src/main/java/**/model/**/*.java,src/main/java/**/domain/**/*.java,src/main/java/**/exception/*.java,src/main/java/**/interceptor/*.java,src/test/**/*.*
+      #       -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco
